--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "create-react-app": "^1.3.1",
     "geodesy": "^1.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "semantic-ui-css": "^2.2.10"
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.68.4"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
