--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -6,6 +6,7 @@
     "create-react-app": "^1.3.1",
     "geodesy": "^1.1.1",
     "react": "^15.4.2",
+    "react-currency-masked-input": "^2.0.2",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.1.1",
     "semantic-ui-css": "^2.2.10",
